--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: rust
+
 rust:
   - nightly-2018-10-14
+
+matrix:
+  include:
+    - os: linux
+    - os: osx
+    - os: windows
+  allow_failures:
+    - os: windows
+
 before_script:
   - rustup component add clippy-preview
 script:
