--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 structopt = "0.2"
 failure = "0.1.3"
+memmap = "0.7.0"
+tempfile = "3"
+quick-error = "*"
