--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 structopt = "0.2"
+#failure = "0.1.3"
+failure = { git = "https://github.com/rust-lang-nursery/failure", branch = "master" }
