--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ license = "MIT OR Apache-2.0"
 structopt = "0.2"
 failure = "0.1.3"
 memmap = "0.7.0"
-tempfile = "3"
 itertools = "0.7"
+libc = "*"
