--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -18,6 +18,7 @@ derive_more = "0.13"
 strum = "0.11.0"
 strum_macros = "0.11.0"
 itertools = "0.7"
+libfirm-rs = { path = "../libfirm-rs" }
 
 [dev-dependencies]
 mjtest = { path = "../mjtest-rs" }
