--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ authors = [
 edition = "2018"
 license = "MIT OR Apache-2.0"
 
+[workspace]
+members = [ ".", "./mjtest", "./mjtest/mjtest_macros" ]
+
 [dependencies]
 structopt = "0.2"
 failure = "0.1.3"
@@ -19,3 +22,5 @@ itertools = "0.7"
 libc = "*"
 termcolor = "1.0.4"
 derive_more = "0.13"
+mjtest = { path = "./mjtest" }
+mjtest_macros = { path = "./mjtest/mjtest_macros" }
