--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mjtest/tests"]
-	path = mjtest/tests
-	url = https://git.scc.kit.edu/IPDSnelting/mjtest-tests
+[submodule "mjtest-rs/tests"]
+	path = mjtest-rs/tests
+	url = https://git.scc.kit.edu/IPDSnelting/mjtest-tests.git
