--- a/.travis.yml
+++ b/.travis.yml
@@ -15,45 +15,67 @@ branches:
 matrix:
   include:
     - os: linux
-      env: BASE_TESTS=true
+      env: TEST_KIND="comprakt-debug"
+    - os: linux
+      env: TEST_KIND="comprakt-release"
     - os: osx
-      env: BASE_TESTS=true
+      env: TEST_KIND="comprakt-release"
+
     - os: linux
-      env: MJ_TESTS=lexer
+      env: TEST_KIND="mjtest-lexer"
     - os: linux
-      env: MJ_TESTS=syntax
+      env: TEST_KIND="mjtest-syntax"
     # Disable until implemented
     # - os: linux
-    #   env: MJ_TESTS=ast
+    #   env: TEST_KIND="mjtest-ast"
     # - os: linux
-    #   env: MJ_TESTS=semantic
+    #   env: TEST_KIND="mjtest-semantic"
     # - os: linux
-    #   env: MJ_TESTS=compile-firm
+    #   env: TEST_KIND="mjtest-compile-firm"
     # - os: linux
-    #   env: MJ_TESTS=compile
+    #   env: TEST_KIND="mjtest-compile"
 
 install:
-  - |
-    if [ -z $MJ_TESTS ]; then
-      rustup component add clippy-preview &&\
-      rustup component add rustfmt-preview
-    else
-      curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3 get-pip.py --user &&\
-      pip install typing --user &&\
-      git clone https://git.scc.kit.edu/IPDSnelting/mjtest.git &&\
-      cd mjtest &&\
-      git submodule update --init &&\
-      git submodule update --remote &&\
-      cd -
-    fi
+  - >
+    case "$TEST_KIND" in
+      comprakt-*)
+        rustup component add clippy-preview && \
+        rustup component add rustfmt-preview;
+        break ;;
+      mjtest-*)
+        curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3 get-pip.py --user && \
+        pip install typing --user && \
+        git clone https://git.scc.kit.edu/IPDSnelting/mjtest.git && \
+        cd mjtest && \
+        git submodule update --init && \
+        git submodule update --remote && \
+        cd -;
+        ;;
+      *)
+        echo "INVALID TEST_KIND=$TEST_KIND";
+        return 1;
+        ;;
+    esac
+    
 
 script:
-  - |
-    if [ -z $MJ_TESTS ]; then
-      cargo fmt --all -- --check &&\
-      cargo clippy --all-targets --all-features -- -D warnings &&\
-      cargo test
-    else
-      cargo build --release &&\
-      MJ_TIMEOUT=60 MJ_RUN=target/release/comprakt python3 ./mjtest/mjt.py $MJ_TESTS
-    fi
+  - > 
+    case "$TEST_KIND" in
+      comprakt-*)
+        case "$TEST_KIND" in
+          comprakt-release) FLAGS="--release"
+        esac
+        cargo fmt --all -- --check && \
+        cargo clippy $FLAGS --all-targets --all-features -- -D warnings && \
+        cargo test $FLAGS ;
+        ;;
+      mjtest-*)
+        MJTEST_KIND=${TEST_KIND#mjtest-}
+        cargo build --release && \
+        MJ_TIMEOUT=60 MJ_RUN=target/release/comprakt python3 ./mjtest/mjt.py $MJTEST_KIND ;
+        ;;
+      *)
+        echo "INVALID TEST_KIND=$TEST_KIND"
+        return 1 ;
+        ;;
+    esac
