--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: rust
 rust:
   - nightly-2018-10-14
 
+cache: cargo
+
 branches:
   only:
     # This is where pull requests from "bors r+" are built.
