Increase stack size in travis release test

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,9 @@ script:
     case "$TEST_KIND" in
       comprakt-*)
         case "$TEST_KIND" in
-          comprakt-release) FLAGS="--release"
+          comprakt-release)
+            FLAGS="--release"
+            export RUST_MIN_STACK=$((8 * 1024 * 1024)) # 8 MiB
         esac
         cargo fmt --all -- --check && \
         cargo clippy $FLAGS --all-targets --all-features -- -D warnings && \
