--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ termcolor = "1.0.4"
 derive_more = "0.13"
 mjtest = { path = "./mjtest-rs" }
 mjtest_macros = { path = "./mjtest-rs/mjtest_macros" }
+strum = "0.11.0"
+strum_macros = "0.11.0"
