--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ libc = "*"
 termcolor = "1.0.4"
 derive_more = "0.13"
 asciifile = { path = "./asciifile" }
+strum = "0.11.0"
+strum_macros = "0.11.0"
 
 [dev-dependencies]
 mjtest = { path = "./mjtest-rs" }
