Switch from white listing branches to black listing them

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,11 @@ rust:
 cache: cargo
 
 branches:
-  only:
-    # This is where pull requests from "bors r+" are built.
-    - staging
-    # This is where pull requests from "bors try" are built.
-    - trying
-    # This is enabled to build pull requests.
-    - master
+  # Don't build these branches
+  except:
+    # Used by bors
+    - trying.tmp
+    - staging.tmp
 
 matrix:
   include:
@@ -58,10 +56,10 @@ install:
         return 1;
         ;;
     esac
-    
+
 
 script:
-  - > 
+  - >
     case "$TEST_KIND" in
       comprakt-*)
         case "$TEST_KIND" in
