--- a/build
+++ b/build
@@ -57,11 +57,11 @@ run_if() {
     fi
 }
 
-run_if "$DO_CLEAN"   cargo clean
+run_if "$DO_CLEAN"   cargo clean --all
 run_if "$DO_RUSTFMT" cargo fmt --all -- --check
 # let build fail on Clippy warnings
-run_if "$DO_CLIPPY"  cargo clippy $BUILD_FLAGS --all-targets --all-features -- -D warnings
-run_if "$DO_BUILD"   cargo build  $BUILD_FLAGS
-run_if "$DO_TEST"    cargo test   $BUILD_FLAGS
+run_if "$DO_CLIPPY"  cargo clippy --all $BUILD_FLAGS --all-targets --all-features -- -D warnings
+run_if "$DO_BUILD"   cargo build  --all $BUILD_FLAGS
+run_if "$DO_TEST"    cargo test   --all $BUILD_FLAGS
 # and also check tests and none-default crate features
-run_if "$DO_CHECK"   cargo check  $BUILD_FLAGS
+run_if "$DO_CHECK"   cargo check  --all $BUILD_FLAGS
