add a CI run that uses the `build` and `run` scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,12 @@ matrix:
       env: TEST_KIND="mjtest-lexer"
     - os: linux
       env: TEST_KIND="mjtest-syntax"
+    - os: linux
+      # only run integration tests, but redirect them
+      # through the `build` and `run` scripts. We cannot
+      # do this in the other CI builds, since they build
+      # `debug` and `release` versions explicitly.
+      env: TEST_KIND="submission-system"
     # Disable until implemented
     # - os: linux
     #   env: TEST_KIND="mjtest-ast"
@@ -51,6 +57,9 @@ install:
         git submodule update --remote && \
         cd -;
         ;;
+      submission-system)
+        # we only need vanilla rust
+        ;;
       *)
         echo "INVALID TEST_KIND=$TEST_KIND";
         return 1;
@@ -75,6 +84,10 @@ script:
         MJTEST_KIND=${TEST_KIND#mjtest-}
         cargo build --release && \
         MJ_TIMEOUT=60 MJ_RUN=target/release/comprakt python3 ./mjtest/mjt.py $MJTEST_KIND ;
+        ;;
+      submission-system)
+        ./build && \
+        COMPILER_BINARY="./run" cargo test --test integration
         ;;
       *)
         echo "INVALID TEST_KIND=$TEST_KIND"
