--- a/compiler-cli/Cargo.toml
+++ b/compiler-cli/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["default-run"]
+
 [package]
 name = "compiler-cli"
 version = "0.0.1"
@@ -8,8 +10,11 @@ authors = [
     "problame <>",
     "reiner-dolp <>"
 ]
+
 edition = "2018"
 license = "MIT OR Apache-2.0"
+
+default-run = "compiler-cli"
 
 [dependencies]
 structopt = "0.2"
