--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -17,6 +17,8 @@ termcolor = "1.0.4"
 derive_more = "0.13"
 strum = "0.11.0"
 strum_macros = "0.11.0"
+memmap = "0.7.0"
+libc = "*"
 
 [dev-dependencies]
 mjtest = { path = "../mjtest-rs" }
