--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -17,6 +17,7 @@ termcolor = "1.0.4"
 derive_more = "0.13"
 strum = "0.11.0"
 strum_macros = "0.11.0"
+itertools = "0.7"
 
 [dev-dependencies]
 mjtest = { path = "../mjtest-rs" }
