--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -21,3 +21,8 @@ strum_macros = "0.11.0"
 [dev-dependencies]
 mjtest = { path = "../mjtest-rs" }
 mjtest_macros = { path = "../mjtest-rs/mjtest_macros" }
+criterion = "0.2"
+
+[[bench]]
+name = "symtab_bench"
+harness = false
