--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ matrix:
     - os: linux
       env: TEST_KIND="mjtest-syntax"
     - os: linux
+      env: TEST_KIND="mjtest-semantic"
+    - os: linux
       # only run integration tests, but redirect them
       # through the `build` and `run` scripts. We cannot
       # do this in the other CI builds, since they build
@@ -34,8 +36,6 @@ matrix:
     # Disable until implemented
     # - os: linux
     #   env: TEST_KIND="mjtest-ast"
-    # - os: linux
-    #   env: TEST_KIND="mjtest-semantic"
     # - os: linux
     #   env: TEST_KIND="mjtest-compile-firm"
     # - os: linux
