--- a/.travis.yml
+++ b/.travis.yml
@@ -93,3 +93,23 @@ script:
         return 1 ;
         ;;
     esac
+
+
+after_success: >
+    case "$TEST_KIND" in
+      comprakt-release)
+        cargo doc \
+        && echo '<!doctype html><title>Redirecting...</title><meta http-equiv=refresh content=0;url=compiler-cli/index.html><a href="compiler-cli/index.html">Redirecting to "compiler-cli" crate...</a>' > target/doc/index.html ;
+        ;;
+    esac
+
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  local-dir: target/doc/
+  on:
+    branch: master
+    condition: $TEST_KIND = comprakt-release
