--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,7 @@ matrix:
     # - os: linux
     #   env: TEST_KIND="mjtest-compile"
 
-install:
-  - >
+install: |
     case "$TEST_KIND" in
       comprakt-*)
         rustup component add clippy-preview && \
@@ -66,8 +65,7 @@ install:
     esac
 
 
-script:
-  - >
+script: |
     case "$TEST_KIND" in
       comprakt-*)
         case "$TEST_KIND" in
@@ -95,7 +93,7 @@ script:
     esac
 
 
-after_success: >
+after_success: |
     case "$TEST_KIND" in
       comprakt-release)
         cargo doc \
