--- a/.travis.yml
+++ b/.travis.yml
@@ -97,7 +97,7 @@ after_success: |
     case "$TEST_KIND" in
       comprakt-release)
         cargo doc \
-        && echo '<!doctype html><title>Redirecting...</title><meta http-equiv=refresh content=0;url=compiler-cli/index.html><a href="compiler-cli/index.html">Redirecting to "compiler-cli" crate...</a>' > target/doc/index.html ;
+        && echo '<!doctype html><title>Redirecting...</title><meta http-equiv=refresh content=0;url=compiler_cli/index.html><a href="compiler_cli/index.html">Redirecting to "compiler-cli" crate...</a>' > target/doc/index.html ;
         ;;
     esac
 
