--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
     - os: linux
       name: "unit and integration tests in release mode"
       env: TEST_KIND="comprakt-release"
-      if: head_branch IN (staging, trying, master)
+      if: head_branch = master OR branch IN (staging, trying)
     - os: linux
       name: "mj-tests via original python script"
       env: TEST_KIND="mjtest"
@@ -31,7 +31,7 @@ matrix:
     - os: linux
       name: "submission: integration tests using build and run scripts"
       env: TEST_KIND="submission-system"
-      if: head_branch IN (staging, trying, master)
+      if: head_branch = master OR branch IN (staging, trying)
 
 install: |
     case "$TEST_KIND" in
