--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -19,6 +19,8 @@ strum = "0.11.0"
 strum_macros = "0.11.0"
 itertools = "0.7"
 libfirm-rs = { path = "../libfirm-rs" }
+# we need libc to open files for libfirm
+libc = "0.2"
 
 [dev-dependencies]
 mjtest = { path = "../mjtest-rs" }
