temporarily remove pull_request queck to test CI in this PR

--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ script: |
 
 
 after_success: |
-    if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "master" ]; then
+    if [ "$TRAVIS_BRANCH" = "master" ]; then
         case "$TEST_KIND" in
           comprakt-release)
             sudo apt-get update \
