--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ after_success: |
         case "$TEST_KIND" in
           comprakt-debug)
             sudo apt-get update \
-            && sudo apt-get install -y doxygen \
+            && sudo apt-get install -y doxygen graphviz \
             && cargo doc \
             && echo '<!doctype html><title>Redirecting...</title><meta http-equiv=refresh content=0;url=compiler_cli/index.html><a href="compiler_cli/index.html">Redirecting to "compiler-cli" crate...</a>' > target/doc/index.html \
             && make -C libfirm-rs-bindings/libfirm doc \
