--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
     - os: linux
       name: "unit and integration tests in release mode"
       env: TEST_KIND="comprakt-release"
-      if: type != pull_request
+      if: branch IN (staging, trying)
     - os: linux
       name: "mj-tests via original python script"
       env: TEST_KIND="mjtest"
@@ -32,6 +32,10 @@ matrix:
       name: "submission: integration tests using build and run scripts"
       env: TEST_KIND="submission-system"
       if: type != pull_request
+    - os: linux
+      name: "continous deployment"
+      env: TEST_KIND="deploy"
+      if: type != pull_request AND branch IN (master)
 
 install: |
     case "$TEST_KIND" in
@@ -49,6 +53,10 @@ install: |
         cd -;
         ;;
       submission-system)
+        ;;
+      deploy)
+          sudo apt-get update \
+          && sudo apt-get install -y doxygen graphviz;
         ;;
       *)
         echo "INVALID TEST_KIND=$TEST_KIND";
@@ -79,26 +87,17 @@ script: |
         ./build && \
         COMPILER_BINARY="$(pwd)/run" cargo test --release --test integration ;
         ;;
+      deploy)
+        cargo doc \
+        && echo '<!doctype html><title>Redirecting...</title><meta http-equiv=refresh content=0;url=compiler_cli/index.html><a href="compiler_cli/index.html">Redirecting to "compiler-cli" crate...</a>' > target/doc/index.html \
+        && make -C libfirm-rs-bindings/libfirm doc \
+        && mv libfirm-rs-bindings/libfirm/build/doc/html target/doc/doxygen_libfirm;
+        ;;
       *)
         echo "INVALID TEST_KIND=$TEST_KIND"
         return 1 ;
         ;;
     esac
-
-
-after_success: |
-    if [ "$TRAVIS_BRANCH" = "master" ]; then
-        case "$TEST_KIND" in
-          comprakt-debug)
-            sudo apt-get update \
-            && sudo apt-get install -y doxygen graphviz \
-            && cargo doc \
-            && echo '<!doctype html><title>Redirecting...</title><meta http-equiv=refresh content=0;url=compiler_cli/index.html><a href="compiler_cli/index.html">Redirecting to "compiler-cli" crate...</a>' > target/doc/index.html \
-            && make -C libfirm-rs-bindings/libfirm doc \
-            && mv libfirm-rs-bindings/libfirm/build/doc/html target/doc/doxygen_libfirm;
-            ;;
-        esac
-    fi
 
 
 deploy:
@@ -109,4 +108,4 @@ deploy:
   local-dir: target/doc/
   on:
     branch: master
-    condition: $TEST_KIND = comprakt-release
+    condition: $TEST_KIND = deploy
