mjrt: fixup 59e2c09a6fe6f5a4669a0b3d3049957ad53c016c: reliably produce mjrt.a build artifact

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ members = [
     "inspect-ast",
     "libfirm-rs-bindings",
     "libfirm-rs",
-    "mjrt-src",
-    "mjrt-bin",
+    "mjrt",
+]
+exclude = [
+    "mjrt-impl",
 ]
