--- a/compiler-cli/Cargo.toml
+++ b/compiler-cli/Cargo.toml
@@ -25,7 +25,7 @@ termcolor = "1.0.4"
 compiler-lib = { path = "../compiler-lib" }
 inspect-ast = { path = "../inspect-ast" }
 tempfile = "3.0"
-mjrt-bin = { path = "../mjrt-bin" }
+mjrt = { path = "../mjrt" }
 
 [dev-dependencies]
 integration_test_codegen = { path = "integration-test-codegen" }
