fix doxygen failure in CI if cache is warm

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,6 +91,7 @@ script: |
         cargo doc \
         && echo '<!doctype html><title>Redirecting...</title><meta http-equiv=refresh content=0;url=compiler_cli/index.html><a href="compiler_cli/index.html">Redirecting to "compiler-cli" crate...</a>' > target/doc/index.html \
         && make -C libfirm-rs-bindings/libfirm doc \
+        && rm -rf target/doc/doxygen_libfirm \
         && mv libfirm-rs-bindings/libfirm/build/doc/html target/doc/doxygen_libfirm;
         ;;
       *)
