--- a/compiler-cli/Cargo.toml
+++ b/compiler-cli/Cargo.toml
@@ -32,3 +32,6 @@ integration_test_codegen = { path = "integration-test-codegen" }
 assert_cmd = "0.10"
 predicates = "1.0"
 difference = "2.0"
+serde = "1.0"
+serde_json = "1.0"
+lazy_static = "1.2.0"
