firm: define class types, members and methods based on TypeSystem
Since TypeSystem contains the runtime type $System, etc, we also cover
those in this commit.

MethodBodyGenerator requires to the AST, but we derive the class types
etc. from TypeSystem, not the AST.  Hence, ClassMethodDef now contains a
ref to the AST node, which was rather painful wrt lifetimes

--- a/compiler-cli/Cargo.toml
+++ b/compiler-cli/Cargo.toml
@@ -26,6 +26,7 @@ compiler-lib = { path = "../compiler-lib" }
 inspect-ast = { path = "../inspect-ast" }
 tempfile = "3.0"
 mjrt = { path = "../mjrt" }
+env_logger = "0.6"
 
 [dev-dependencies]
 integration_test_codegen = { path = "integration-test-codegen" }
