--- a/compiler-cli/Cargo.toml
+++ b/compiler-cli/Cargo.toml
@@ -14,6 +14,8 @@ authors = [
 edition = "2018"
 license = "MIT OR Apache-2.0"
 
+# NOTE: --features does not work with cargo run with this feature
+#       see https://github.com/rust-lang/cargo/issues/5015
 default-run = "compiler-cli"
 
 [dependencies]
@@ -35,3 +37,9 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 lazy_static = "1.2.0"
+
+
+[features]
+# Enable all UB-safe-making features by default.
+default = [ "checked_new" ]
+checked_new = [ "mjrt/checked_new" ]
