--- a/mjrt-impl/Cargo.toml
+++ b/mjrt-impl/Cargo.toml
@@ -10,3 +10,10 @@ crate-type = ["staticlib", "rlib"]
 [dependencies]
 libc = "0.2"
 backtrace = "0.2"
+
+[features]
+# Do not enable any performance-degrading features by default
+# at this level. This is done by compiler-cli features.
+default = [ ]
+
+checked_new = []
