--- a/compiler-cli/Cargo.toml
+++ b/compiler-cli/Cargo.toml
@@ -29,6 +29,7 @@ inspect-ast = { path = "../inspect-ast" }
 tempfile = "3.0"
 mjrt = { path = "../mjrt" }
 env_logger = "0.6"
+wait-timeout = "0.1.5"
 
 [dev-dependencies]
 integration_test_codegen = { path = "integration-test-codegen" }
