--- a/runner-integration-tests/Cargo.toml
+++ b/runner-integration-tests/Cargo.toml
@@ -12,3 +12,6 @@ serde_derive = "1.0"
 serde_json = "1.0"
 lazy_static = "1.2.0"
 wait-timeout = "0.1.5"
+serde_yaml = "0.8"
+structopt = "0.2"
+failure = "0.1"
