implement several features: extend yaml to all test kinds, make some files optional, support stdin

--- a/integration-tests/.gitignore
+++ b/integration-tests/.gitignore
@@ -18,5 +18,8 @@
 # ignore default binary file
 *.out
 
+# ignore yaml stripped mini java files
+*.stripped
+
 # ignore assembly tests by default
 assembly/
