--- a/integration-tests/.gitignore
+++ b/integration-tests/.gitignore
@@ -14,9 +14,13 @@
 
 # ignore tentative files
 *.tentative
+*.actual
 
 # ignore default binary file
 *.out
+
+# ignore assembly
+*.S
 
 # ignore yaml stripped mini java files
 *.stripped
