--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -44,4 +44,4 @@ default = [ ]
 # This feature enables the `breakpoint!` macro, which
 # among other things, is used to implement the `gui`
 # flag in custom optimization sequences.
-gui_debugger = [ ]
+debugger_gui = [ ]
