Redirect submodule to the ipd git server

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,8 @@
 	url = https://git.scc.kit.edu/IPDSnelting/mjtest-tests.git
 [submodule "libfirm-rs-bindings/libfirm"]
 	path = libfirm-rs-bindings/libfirm
-	url = https://github.com/libfirm/libfirm.git
+	url = http://pp.info.uni-karlsruhe.de/git/libfirm.git
+	branch = set_b_value
 [submodule "compiler-lib/debugger-gui"]
 	path = compiler-lib/debugger-gui
 	url = https://github.com/comprakt/dot-visualizer.git
