--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -26,6 +26,8 @@ serde = "1.0"
 serde_derive = "1.0"
 priority-queue = "0.5.2"
 petgraph = "0.4.13"
+intervallum = "1.3.0"
+gcollections = "1.4.0"
 
 # for the gui debugger
 rocket = "0.4.0"
