Improved node wrapping performance.

--- a/libfirm-rs/Cargo.toml
+++ b/libfirm-rs/Cargo.toml
@@ -14,3 +14,4 @@ edition = "2018"
 libfirm-rs-bindings = { path = "../libfirm-rs-bindings" }
 derive_more = "0.13"
 strum_macros = "*"
+lazy_static = "1.2.0"
