very hacky impl of a benchmarking utility

--- a/runner-integration-tests/Cargo.toml
+++ b/runner-integration-tests/Cargo.toml
@@ -19,3 +19,5 @@ failure = "0.1"
 regex = "1"
 # used to parse Duration from a string in the YAML of timeout tests
 serde-humantime = "0.1.1"
+log = "0.4"
+env_logger = "0.6"
