--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -24,6 +24,7 @@ libc = "0.2"
 log = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
+serde_json = "1.0"
 priority-queue = "0.5.2"
 petgraph = "0.4.13"
 
@@ -31,6 +32,9 @@ petgraph = "0.4.13"
 rocket = "0.4.0"
 rocket_contrib = "0.4.0"
 lazy_static = "1.2.0"
+
+# for benchmarking
+streaming-stats = "0.2"
 
 [dev-dependencies]
 mjtest = { path = "../mjtest-rs" }
