build/travis: submodule update --init and --remote simultaneously
Otherwise, the submodule might point to a non-existent object:
https://git.scc.kit.edu/IPDSnelting/mjtest/merge_requests/3/diffs

    git clone https://git.scc.kit.edu/IPDSnelting/mjtest.git && \
          cd mjtest && \
          git submodule update --init

    Cloning into 'mjtest'...
    remote: Enumerating objects: 788, done.
    remote: Counting objects: 100% (788/788), done.
    remote: Compressing objects: 100% (391/391), done.
    remote: Total 788 (delta 437), reused 725 (delta 392)
    Receiving objects: 100% (788/788), 162.16 KiB | 3.45 MiB/s, done.
    Resolving deltas: 100% (437/437), done.
    Submodule 'tests' (https://git.scc.kit.edu/IPDSnelting/mjtest-tests) registered for path 'tests'
    Cloning into '/tmp/mjtest/tests'...
    warning: redirecting to https://git.scc.kit.edu/IPDSnelting/mjtest-tests.git/
    warning: redirecting to https://git.scc.kit.edu/IPDSnelting/mjtest-tests.git/
    warning: redirecting to https://git.scc.kit.edu/IPDSnelting/mjtest-tests.git/
    error: Server does not allow request for unadvertised object 78b27a109cb1a1a6bc6d3a6e0f57b5018305530c
    Fetched in submodule path 'tests', but it did not contain 78b27a109cb1a1a6bc6d3a6e0f57b5018305530c. Direct fetching of that commit failed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,7 @@ install: |
         pip install typing --user && \
         git clone https://git.scc.kit.edu/IPDSnelting/mjtest.git && \
         cd mjtest && \
-        git submodule update --init && \
-        git submodule update --remote && \
+        git submodule update --init --remote && \
         cd -;
         ;;
       submission-system)
