add --optimization/-O flag to benchmark tool

--- a/runner-integration-tests/Cargo.toml
+++ b/runner-integration-tests/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 integration_test_codegen = { path = "../codegen-integration-tests" }
 compiler-lib = { path = "../compiler-lib" }
+compiler-cli = { path = "../compiler-cli" }
 difference = "2.0"
 serde = "1.0"
 serde_derive = "1.0"
