--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+asciifile = { path = "../asciifile" }
 failure = "0.1.3"
 termcolor = "1.0.4"
 derive_more = "0.13"
