--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 asciifile = { path = "../asciifile" }
+symtab = { path = "../symtab" }
 failure = "0.1.3"
 termcolor = "1.0.4"
 derive_more = "0.13"
