--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "libfirm-rs-bindings",
     "libfirm-rs",
     "mjrt",
+    "parser",
     "symtab",
     "utils",
     "runner-integration-tests",
