refactor: move type_checking and deps to separate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "mjrt",
     "parser",
     "symtab",
+    "type_checking",
     "utils",
     "runner-integration-tests",
     "codegen-integration-tests"
