--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -20,6 +20,7 @@ strtab = { path = "../strtab" }
 lexer = { path = "../lexer" }
 parser = { path = "../parser" }
 utils = { path = "../utils" }
+type-checking = { path = "../type_checking" }
 failure = "0.1.3"
 termcolor = "1.0.4"
 derive_more = "0.13"
