refactor: move debugger implementation into separate crate
rustc emits some false warnings if debugger_gui is enabled,
don't know how to fix them

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "compiler-lib",
     "compiler-cli",
     "compiler-shared",
+    "debugging",
     "diagnostics",
     "firm-construction",
     "inspect-ast",
