--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -22,6 +22,7 @@ parser = { path = "../parser" }
 utils = { path = "../utils" }
 type-checking = { path = "../type_checking" }
 firm-construction = { path = "../firm-construction" }
+debugging = { path = "../debugging" }
 failure = "0.1.3"
 termcolor = "1.0.4"
 derive_more = "0.13"
