--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -55,7 +55,5 @@ harness = false
 
 [features]
 default = [ ]
-# This feature enables the `breakpoint!` macro, which
-# among other things, is used to implement the `gui`
-# flag in custom optimization sequences.
-debugger_gui = [ ]
+
+debugger_gui = [ "debugging/debugger_gui" ]
