--- a/type_checking/Cargo.toml
+++ b/type_checking/Cargo.toml
@@ -25,3 +25,8 @@ derive_more = "0.13"
 strum = "0.11.0"
 strum_macros = "0.11.0"
 itertools = "0.7"
+
+[dev-dependencies]
+mjtest = { path = "../mjtest-rs" }
+mjtest_macros = { path = "../mjtest-rs/mjtest_macros" }
+compiler-shared = { path = "../compiler-shared" }
