POC: live interval visualization

--- a/compiler-lib/Cargo.toml
+++ b/compiler-lib/Cargo.toml
@@ -35,6 +35,8 @@ rocket = "0.4.0"
 rocket_contrib = "0.4.0"
 lazy_static = "1.2.0"
 
+prettytable-rs = "0.8"
+
 [dev-dependencies]
 mjtest = { path = "../mjtest-rs" }
 mjtest_macros = { path = "../mjtest-rs/mjtest_macros" }
