--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: rust
 
 rust:
-  - nightly-2018-10-14
+  - nightly-2018-12-17
 
-cache: cargo
+# Caching must not be activated because runner-integration-test
+# lacks cache invalidation when new integration-tests/* are added.
 
 branches:
   only:
