--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -19,6 +19,7 @@ utils = { path = "../utils" }
 asciifile = { path = "../asciifile" }
 strtab = { path = "../strtab" }
 lexer = { path = "../lexer" }
+diagnostics = { path = "../diagnostics" }
 
 failure = "0.1.3"
 derive_more = "0.13"
