--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -26,6 +26,7 @@ derive_more = "0.13"
 strum = "0.11.0"
 strum_macros = "0.11.0"
 itertools = "0.7"
+lazy_static = "1.2.0"
 
 [dev-dependencies]
 termcolor = "1.0.4"
