--- a/.travis.yml
+++ b/.travis.yml
@@ -82,8 +82,8 @@ script: |
         MJ_TIMEOUT=60 MJ_RUN=target/release/compiler-cli python3 ./mjtest/mjt.py lexer && \
         MJ_TIMEOUT=60 MJ_RUN=target/release/compiler-cli python3 ./mjtest/mjt.py syntax && \
         MJ_TIMEOUT=60 MJ_RUN=target/release/compiler-cli python3 ./mjtest/mjt.py semantic && \
-        MJ_TIMEOUT=60 MJ_RUN=target/release/compiler-cli python3 ./mjtest/mjt.py compile-firm && \
-        MJ_TIMEOUT=60 MJ_RUN=target/release/compiler-cli python3 ./mjtest/mjt.py compile;
+        MJ_TIMEOUT=0 MJ_RUN=target/release/compiler-cli python3 ./mjtest/mjt.py compile-firm --all_exec_tests && \
+        MJ_TIMEOUT=0 MJ_RUN=target/release/compiler-cli python3 ./mjtest/mjt.py compile --all_exec_tests ;
         ;;
       submission-system)
         ./build && \
